2001-05-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history): Modify display format for no folding.

2001-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): New implementation.
	(w3m-about-history-indent-level): New variable.
	(w3m-about-history-max-indentation): New variable.

	* icons/history-up.xpm: Replaced a pixmap with a new pattern.

2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-dtree.el (w3m-dtree-default-allfiles): Modify default value.
	(w3m-dtree-fancy-display): New variable.
	(w3m-dtree-create-fancy): New function.
	(w3m-dtree-create-sub): Insert the indicator which directory or file,
	if allfiles.
	(w3m-about-dtree): Use fancy style function, if
	'w3m-dtree-fancy-display' is non-nil.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Use existing frame or window.

2001-05-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-dtree.el (w3m-dtree-create): Fix HTML bug.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-cache-underline-faces): Added docs that it is
	currently needed for only pretest versions of Emacs 21.
	(w3m-fontify-anchors): Don't fontify the trailing white spaces of a
	href.
	* w3m-xmas.el (w3m-insert-image): Don't handle underline faces.
	* w3m-e21.el (w3m-insert-image): Simplified.

2001-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-setup-header-line, w3m-exec, w3m-decode-entities):
	Replace `add-text-properties' with `w3m-add-text-properties'.
	(w3m-fontify-images, w3m-fontify-anchors): Ditto.
	(w3m-setup-header-line, w3m-cache-contents, w3m-refontify-anchor):
	Replace `put-text-property' with `w3m-add-text-properties'.
	(w3m-toggle-inline-images, w3m-fontify-anchors): Ditto.
	(w3m-fontify-underline, w3m-fontify-bold): Ditto.
	(w3m-add-text-properties): New macro used to put non-sticky text
	properties.

	* w3m-xmas.el (w3m-setup-header-line): Don't put non-sticky text
	property here.

2001-05-16  Hideyuki SHIRAI  <shirai@meadowy.org>
